--- a/spin2/package.json
+++ b/spin2/package.json
@@ -64,6 +64,7 @@
     },
     "devDependencies": {
         "@types/vscode": "^1.50.0",
+        "js-yaml": "^3.14.0",
         "typescript": "^3.7.5",
         "vscode-test": "^1.3.0"
     },
