--- a/spin2/package.json
+++ b/spin2/package.json
@@ -4,7 +4,7 @@
     "description": "Spin2/Pasm2 Syntax Hightlighting and Code Outline support",
     "icon": "images/Propeller.ico",
     "version": "0.2.2",
-    "publisher": "IronSheep",
+    "publisher": "IronSheepProductionsLLC",
     "repository": {
         "type": "git",
         "url": "https://github.com/ironsheep/P2-vscode-extensions"
@@ -86,6 +86,6 @@
         "vscode-test": "^1.3.0"
     },
     "dependencies": {
-        "vsce": "^1.81.1"
+        "vsce": "^1.85.0"
     }
 }
