Add new types for Semantic use and start using them
- add returnValue and mofifier of local
- decorate returnValue and local where needed
- add decode of single line enum declaration
- add coloring for enum type (make same a constant type)

--- a/spin2/package.json
+++ b/spin2/package.json
@@ -70,7 +70,27 @@
                 ],
                 "configuration": "./spin2.language-configuration.json"
             }
-        ]
+        ],
+        "semanticTokenTypes": [
+            {
+                "id": "returnValue",
+                "superType": "parameter",
+                "description": "A parameter type of returnValue."
+            }
+        ],
+        "semanticTokenModifiers": [
+            {
+              "id": "local",
+              "description": "Annotates a symbol that is declared local to a method"
+            }
+        ],
+        "semanticTokenScopes": [
+            {
+              "scopes": {
+                "returnValue": ["meta.returntype.spin"]
+              }
+            }
+          ]
     },
     "scripts": {
         "vscode:prepublish": "npm run compile && npm run compile:grammar",
