add storage type and DAT processing
- add new "storageType" to depict BYTE/WORD/LONG in code ref's
- add new mech to allow for processing of inline PASM code
- adjust theme colors

--- a/spin2/package.json
+++ b/spin2/package.json
@@ -76,6 +76,11 @@
                 "id": "returnValue",
                 "superType": "parameter",
                 "description": "A parameter type of returnValue."
+            },
+            {
+                "id": "storageType",
+                "superType": "type",
+                "description": "A built-in storage type"
             }
         ],
         "semanticTokenModifiers": [
@@ -87,7 +92,8 @@
         "semanticTokenScopes": [
             {
               "scopes": {
-                "returnValue": ["meta.returntype.spin"]
+                "returnValue": ["meta.returntype.spin"],
+                "storageType": ["storage.type.pasm.spin2"]
               }
             }
           ]
