continued cleanup of PASM support
- Added instance modifier for global data
- Fixed spin parse !variable
- Fixed spin parse complex assignment target  recognizer
- Fixed decimal number recognizer
- Added more not-working notes...
- More theme color adjustments
- remove improper static modifiers

--- a/spin2/package.json
+++ b/spin2/package.json
@@ -87,7 +87,11 @@
             {
               "id": "local",
               "description": "Annotates a symbol that is declared local to a method"
-            }
+            },
+            {
+                "id": "instance",
+                "description": "Annotates a variable unique to an instance"
+              }
         ],
         "semanticTokenScopes": [
             {
