On way to cleaning of spin statements
- Syntax: add GETMS, QSIN, QCOS
- Add new Token Modifier: missingDeclaration - Annotates a variable/variable modification but no declaration found!
- Revised coloring for local variables and built-in methods

--- a/spin2/package.json
+++ b/spin2/package.json
@@ -93,7 +93,11 @@
             {
                 "id": "instance",
                 "description": "Annotates a variable unique to an instance"
-              }
+            },
+            {
+                "id": "missingDeclaration",
+                "description": "Annotates a variable but no declaration found!"
+            }
         ],
         "semanticTokenScopes": [
             {
