updates to syntax highlighter

--- a/spin2/package.json
+++ b/spin2/package.json
@@ -3,7 +3,7 @@
     "displayName": "Spin2",
     "description": "Spin2/Pasm2 Syntax/Semantic Highlighting w/Code Outline support",
     "icon": "images/Propeller.ico",
-    "version": "1.1.0",
+    "version": "1.3.0",
     "publisher": "IronSheepProductionsLLC",
     "repository": {
         "type": "git",
@@ -31,17 +31,17 @@
     "license": "MIT",
     "main": "out/spin2.extension.js",
     "activationEvents": [
-        "onLanguage:spin2"
+        "onLanguage:spin2",
+        "onStartupFinished"
     ],
     "engines": {
-        "vscode": "^1.50.0"
+        "vscode": "^1.59.0"
     },
     "categories": [
         "Programming Languages"
     ],
     "contributes": {
-        "themes": [
-            {
+        "themes": [{
                 "label": "Spin2 Ironsheep",
                 "uiTheme": "vs-dark",
                 "path": "./themes/isp-spin-theme.json"
@@ -52,29 +52,24 @@
                 "path": "./themes/isp-spin-syntax-theme.json"
             }
         ],
-        "grammars": [
-            {
-                "language": "spin2",
-                "scopeName": "source.spin2",
-                "path": "syntaxes/spin2.tmLanguage.json"
-            }
-        ],
-        "languages": [
-            {
-                "id": "spin2",
-                "aliases": [
-                    "spin2",
-                    "Spin2",
-                    "SPIN2"
-                ],
-                "extensions": [
-                    ".spin2"
-                ],
-                "configuration": "./spin2.language-configuration.json"
-            }
-        ],
-        "semanticTokenTypes": [
-            {
+        "grammars": [{
+            "language": "spin2",
+            "scopeName": "source.spin2",
+            "path": "syntaxes/spin2.tmLanguage.json"
+        }],
+        "languages": [{
+            "id": "spin2",
+            "aliases": [
+                "spin2",
+                "Spin2",
+                "SPIN2"
+            ],
+            "extensions": [
+                ".spin2"
+            ],
+            "configuration": "./spin2.language-configuration.json"
+        }],
+        "semanticTokenTypes": [{
                 "id": "returnValue",
                 "superType": "parameter",
                 "description": "A parameter type of returnValue."
@@ -85,8 +80,7 @@
                 "description": "A built-in storage type"
             }
         ],
-        "semanticTokenModifiers": [
-            {
+        "semanticTokenModifiers": [{
                 "id": "local",
                 "description": "Annotates a symbol that is declared local to a method"
             },
@@ -99,30 +93,45 @@
                 "description": "Annotates a variable but no declaration found!"
             }
         ],
-        "semanticTokenScopes": [
-            {
-                "scopes": {
-                    "returnValue": [
-                        "meta.returntype.spin"
-                    ],
-                    "storageType": [
-                        "storage.type.pasm.spin2"
-                    ]
-                }
+        "semanticTokenScopes": [{
+            "scopes": {
+                "returnValue": [
+                    "meta.returntype.spin"
+                ],
+                "storageType": [
+                    "storage.type.pasm.spin2"
+                ]
             }
-        ]
+        }]
     },
     "scripts": {
         "vscode:prepublish": "npm run compile && npm run compile:grammar",
         "compile": "tsc -p ./",
+        "lint": "eslint src --ext ts",
         "watch": "tsc -watch -p ./",
-        "pretest": "npm run compile",
+        "pretest": "npm run compile && npm run lint",
+        "test": "node ./out/test/runTest.js",
         "compile:grammar": "npx js-yaml syntaxes/spin2.tmLanguage.YAML-tmLanguage > syntaxes/spin2.tmLanguage.json"
     },
     "devDependencies": {
-        "@types/vscode": "^1.50.0",
+        "@types/glob": "^7.1.4",
+        "@types/mocha": "^8.2.2",
+        "@types/node": "14.x",
+        "@types/vscode": "^1.59.0",
+        "@typescript-eslint/eslint-plugin": "^4.26.0",
+        "@typescript-eslint/parser": "^4.26.0",
+        "eslint": "^7.27.0",
+        "glob": "^7.1.7",
         "js-yaml": "^3.14.0",
-        "typescript": "^4.0.2",
-        "vscode-test": "^1.3.0"
+        "lodash": ">=4.17.19",
+        "mocha": "^8.4.0",
+        "mocha-explorer-launcher-scripts": "^0.3.0",
+        "source-map-support": "^0.5.19",
+        "typescript": "^4.3.2",
+        "vscode-test": "^1.5.2"
+    },
+    "dependencies": {
+        "keytar": "^7.7.0",
+        "vsce": "^1.85.0"
     }
 }
