--- a/spin2/package.json
+++ b/spin2/package.json
@@ -3,7 +3,7 @@
     "displayName": "Spin2",
     "description": "Spin2/Pasm2 Syntax/Semantic Highlighting w/Code Outline support",
     "icon": "images/Propeller.ico",
-    "version": "1.3.0",
+    "version": "1.2.0",
     "publisher": "IronSheepProductionsLLC",
     "repository": {
         "type": "git",
@@ -91,6 +91,10 @@
             {
                 "id": "missingDeclaration",
                 "description": "Annotates a variable but no declaration found!"
+            },
+            {
+                "id": "illegalUse",
+                "description": "Idenitifes keywords where they shouldn't be!"
             }
         ],
         "semanticTokenScopes": [{
@@ -128,10 +132,9 @@
         "mocha-explorer-launcher-scripts": "^0.3.0",
         "source-map-support": "^0.5.19",
         "typescript": "^4.3.2",
-        "vscode-test": "^1.5.2"
+        "vscode-test": "^1.5.2",
+        "vsce": "^1.85.0"
     },
     "dependencies": {
-        "keytar": "^7.7.0",
-        "vsce": "^1.85.0"
     }
 }
